# since-ai

./: .gitignore  README.md  agent_caller.py  backend_requests.py  chart_factory.py  components.py  env-schema  env_vars.py  main.py  pyproject.toml  requirements.txt  semantic_viz_extension.py  streamlit_app.py  styles.css  visualization_agent.py
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
charts/: __init__.py  base_chart.py  box_plot_chart.py  chart_registry.py  histogram_chart.py  line_chart.py  pie_chart.py
clustering/: main.py  semantic_clustering.py
data/: English dataset Kesto.csv  English dataset Kiire.csv  English dataset Korjauspyyntö.csv  English dataset Käsittelyaika.csv  English dataset Lokaatio.csv  English dataset Rappuset.csv  English dataset Sähköturvallisuus.csv  English dataset.xlsx  data.json  data_english.json  sample_data.csv  sample_data.json
franco/: main.py  semantic_clustering.py
frontend/: backend_requests.py  data.json  main.py
hse-mining-frontend-anon/: Dockerfile  README.md  pyproject.toml
hse-mining-frontend-anon/hse-mining-frontend/: awsconnection.py  components.py  filters.py  frontend.py  interactions.py  transformations.py
hse-mining-frontend-anon/prompts/: analysis_generator.txt  sql_generator.txt
hse-mining-frontend-anon/utils/: build.sh  run.sh
model_orchestrator/: ARCHITECTURE.md  README.md  __init__.py  agent_types.py  config.py  example_usage.py  integration.py  model_registry.py  orchestrator.py  prompt_analyzer.py  test_orchestrator.py
plot_type_generator/: README.md  lexical_analysis_agent.py  (+8 more)
(+48 files in other folders)
