[project]
name = "hse-visualization-agent"
version = "0.1.0"
description = "AI-powered visualization agent for automated chart recommendations using multi-agent LLM analysis. Created for the Bayer challenge at the Since AI Hackathon 2025."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.3.27",
  "langchain-core>=0.3.80",
  "langchain-featherless-ai>=0.1.2",
  "langchain-google-genai>=2.1.12",
  "langgraph>=1.0.1",
  "matplotlib>=3.10.7",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "pillow>=12.0.0",
  "plotly>=6.5.0",
  "python-dotenv>=1.2.1",
  "sentence-transformers>=5.1.2",
  "streamlit>=1.51.0",
]
